pagination styling added, breadcrumbs added

--- a/app/views/plants/show.html.erb
+++ b/app/views/plants/show.html.erb
@@ -1,3 +1,4 @@
+<%= render_breadcrumbs %>
 <h1><%= @plant.name %></h1>
 <h2><i><%= @plant.latin_name %></i></h2>
 <%= image_tag @plant.image, alt: @plant.name, width: "500", class: "img-thumbnail" %>
