--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,17 +1,19 @@
 <header class='container-fluid'>
-    <nav class='navbar navbar-expand-sm container-fluid'>        
-        <button class='navbar-toggler' type='button' data-bs-toggle='collapse' data-bs-target='#nav-overflow'>
-            <span class='navbar-toggler-icon'></span>
-        </button>
-        <%# <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M512 32c0 113.6-84.6 207.5-194.2 222c-7.1-53.4-30.6-101.6-65.3-139.3C290.8 46.3 364 0 448 0h32c17.7 0 32 14.3 32 32zM0 96C0 78.3 14.3 64 32 64H64c123.7 0 224 100.3 224 224v32V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V320C100.3 320 0 219.7 0 96z"/></svg> %>
-        <%= link_to "Sprout", root_path, class: 'navbar-brand' %>            
-        
+    <nav class='navbar navbar-expand-sm container-fluid'>
+        <div>
+            <button class='navbar-toggler' type='button' data-bs-toggle='collapse' data-bs-target='#nav-overflow'>
+                <span class='navbar-toggler-icon'></span>
+            </button>
+            <%# <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M512 32c0 113.6-84.6 207.5-194.2 222c-7.1-53.4-30.6-101.6-65.3-139.3C290.8 46.3 364 0 448 0h32c17.7 0 32 14.3 32 32zM0 96C0 78.3 14.3 64 32 64H64c123.7 0 224 100.3 224 224v32V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V320C100.3 320 0 219.7 0 96z"/></svg> %>
+            <%= link_to "Sprout", root_path, class: 'navbar-brand' %>
+        </div>
         <div class='collapse navbar-collapse' id='nav-overflow'>                     
             <%= link_to "About", about_path, class: 'nav-link' %>
             <%= link_to "Contact Us", contact_path, class: 'nav-link' %>
-            <%= link_to "Plants", plants_path, class: 'nav-link' %>
-            <%# search always visible??? %>
         </div>
+        <% if not current_page?("/") %>
+            <%= render 'layouts/search' %>
+        <% end %>
         <div>Log In Conditional</div>
         <button class='cart' type='button' data-bs-toggle='collapse' data-bs-target='#cart-details'>
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
