--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>About Us</h1>
+<%= image_tag @about.image, alt: "About Us", width: "500", class: "img-thumbnail" if @about.image.attached? %>
+<p><%= @about.description %></p>
