--- a/app/views/plants/index.html.erb
+++ b/app/views/plants/index.html.erb
@@ -1,3 +1,4 @@
+<%= render_breadcrumbs %>
 <p><%= pluralize(@plants_count, "result") %> found</p>
 
 <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-3 g-4">
