--- a/app/views/layouts/_subcategories.html.erb
+++ b/app/views/layouts/_subcategories.html.erb
@@ -1,5 +1,6 @@
-<%= form_with do |form| %>
-  <div class='input-group' id='subcategory_select'>
-    <%= form.collection_select :subcategory, subcategories, :id, :plant_subcategory, {prompt: "Subcategory..."}, {class: 'form-select'} %>
-  </div>
-<% end %>
+<%# not used %>
+
+<select id="subcategory" class="form-select" form='search_form' name='subcategory'>
+  <option value="">Subcategory...</option>
+    <%= options_from_collection_for_select(subcategories, 'id', 'plant_subcategory') %>
+</select>
