--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -67,3 +67,22 @@ header a:active, footer a:active{
     width: 100%;
     opacity: 1;
 } */
+
+.price {
+    transform: translate(0px, 20px); 
+}
+
+.zoom:hover .price {
+    transform: translate(0px, 0px);
+    transition: transform 0.5s ease-out;
+
+}
+
+/* .zoom:hover .price{
+    transition: translate(0px, 0px) 0.5s ease-out;
+} */
+
+.zoom:hover img {
+    transform: scale(1.1);
+    transition: transform 0.5s ease-out;
+}
