--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -1,7 +1,7 @@
 <%= form_with url: plants_path, method: :get, local: true, id: 'search_form' do |form| %>
     <div class="input-group">
         <button type='button' class='btn btn-outline-success dropdown-toggle' data-bs-toggle='collapse' data-bs-target='#collapse_search'></button>
-        <%= form.text_field :search, class: 'form-control shadow-none border-success', placeholder: "Search...", value: params[:search] %>
+        <%= form.search_field :search, class: 'form-control shadow-none border-success', placeholder: "Search...", value: params[:search] %>
         <%= form.submit "Grow!", class: 'btn btn-outline-success' %>
     </div>
 
@@ -19,6 +19,17 @@
                 <%= options_from_collection_for_select [], :plant_subcategory, :id %>
               </select>
             </div>
+            <div class='d-flex justify-content-between mt-2 px-1'>
+              <div class='form-check'>
+                <%= form.check_box :sale, {class: 'form-check-input'} %>
+                <%= form.label :sale, "On Sale", {class: 'form-check-label'} %>
+              </div>
+              <div class='form-check'>
+                <%= form.check_box :updated, {class: 'form-check-input'} %>
+                <%= form.label :updated, "Recently Updated", {class: 'form-check-label'} %>              
+              </div>
+            </div>
+
         </div>
     </div>
 <% end %>
