--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
     <%= render "layouts/header" %>
     <main class='container-fluid homebody'>
         <%= yield %>
+        <p class='notice'><%= notice %></p>
+        <p class='alert'><%= alert %></p>
     </main>
     <%= render "layouts/footer" %>
   </body>
