--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -63,7 +63,8 @@
                     </div>
                 </div>
                 <% end %>
-                <button class='btn btn-primary'>Checkout</button>
+                <%= button_to "Checkout", orders_path, method: :post, class: 'btn btn-primary' %>
+                <%# <button class='btn btn-primary'>Checkout</button> %>
             <% else %>
                 <div class='card'>
                     <div class='card-body'>
