--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -63,7 +63,7 @@
                     </div>
                 </div>
                 <% end %>
-                <%= button_to "Checkout", orders_path, method: :post, class: 'btn btn-primary' %>
+                <%= link_to "Checkout", '/checkout/shipping', class: 'btn btn-primary' %>
                 <%# <button class='btn btn-primary'>Checkout</button> %>
             <% else %>
                 <div class='card'>
