embedded stripe added, payment process functioning

--- a/app/views/checkouts/summary.html.erb
+++ b/app/views/checkouts/summary.html.erb
@@ -53,5 +53,5 @@
             </ul>
         </div>
     </div>
-    <%= button_to "Pay", "#", class: 'btn btn-outline-primary' %>
+    <%= link_to "Payment Details", checkout_payment_path, class: 'btn btn-outline-primary' %>
 </div>
