--- a/app/views/users/registrations/show.html.erb
+++ b/app/views/users/registrations/show.html.erb
@@ -39,8 +39,11 @@
     <div class='accordion' id='orders'>
         <div class='accordion-item'>
             <h2 class='accordion-header' id='heading<%= order.id %>'>
-                <button class='accordion-button border <%= order.status_id = 1 ? 'border-warning' : 'border-success' %>' type='button' data-bs-toggle='collapse' data-bs-target='#collapse<%= order.id %>' aria-expanded='true' aria-controls='collapse<%= order.id %>'>
-                    Order No. <%= order.id %> - <%= order.created_at.strftime("%B %d, %Y") %>
+                <button class='accordion-button border <%= order.status_id == 1 ? 'border-warning' : 'border-success' %>' type='button' data-bs-toggle='collapse' data-bs-target='#collapse<%= order.id %>' aria-expanded='true' aria-controls='collapse<%= order.id %>'>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" fill="<%= order.status_id == 1 ? 'orange' : 'green' %>" class="bi bi-circle-fill me-2" viewBox="0 0 16 16">
+                        <circle cx="8" cy="8" r="8"/>
+                    </svg>   
+                    #<%= order.id %> - <%= order.created_at.strftime("%B %d, %Y") %>
                 </button>
             </h2>
             <div id='collapse<%= order.id %>' class='accordion-collapse collapse' aria-labelledby='heading<%= order.id %>' data-bs-parent='#orders'>
