--- a/app/views/users/registrations/show.html.erb
+++ b/app/views/users/registrations/show.html.erb
@@ -1,9 +1,10 @@
 <p><b>Account Details</b></p>
+
 <%= form_with model: @user, url: '/account', method: :put, class: 'row g-3 mb-3' do |f| %>
-    <div class='col-6'>
+    <div class='col-12 col-sm-6'>
         <%= f.text_field :first_name, placeholder: 'First Name', class: 'form-control' %>
     </div>
-    <div class='col-6'>
+    <div class='col-12 col-sm-6'>
         <%= f.text_field :last_name, placeholder: 'Last Name', class: 'form-control' %>
     </div>
     <div class='col-12'>
@@ -15,13 +16,13 @@
     <div class='col-12'>
         <%= f.text_field :street, placeholder: 'Street', class: 'form-control' %>
     </div>
-    <div class='col-6'>
+    <div class='col-12 col-sm-6'>
         <%= f.text_field :city, placeholder: 'City', class: 'form-control' %>
     </div>
-    <div class='col-2'>
-        <%= f.collection_select :province_id, Province.all, :id, :code, {prompt: 'Select a province...'}, class: 'form-select' %>
+    <div class='col-6 col-sm-2'>
+        <%= f.collection_select :province_id, Province.all, :id, :code, {prompt: 'Province...'}, class: 'form-select' %>
     </div>
-    <div class='col-4'>
+    <div class='col-6 col-sm-4'>
         <%= f.text_field :postal_code, placeholder: 'Postal Code', class: 'form-control' %>
     </div>
     <div class='col-6'>
